# tutor_working_bot

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
src/: get_creds.py  main.py  run_bot.py  send_notification.py
src/db_info/: difference.py
